--- a/.env
+++ b/.env
@@ -17,3 +17,8 @@ OPENAI_API_KEY=sk-proj-Oma0BxGOKNvUB4HUyvJd1dmby1Ft-wRL6H50EFhHKnM03Zj6babqeVw1v
 
 SUPPORT_MAIL=codesecuredevteam@gmail.com
 SUPPORT_MAIL_PASSWORD=OwnerPass789
+SMTP_HOST=smtp.sendgrid.net
+SMTP_PORT=587
+SMTP_USER=apikey
+SMTP_PASS=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
+FROM_EMAIL=codesecuredevteam@gmail.com
