--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ OPENAI_API_KEY=sk-proj-Oma0BxGOKNvUB4HUyvJd1dmby1Ft-wRL6H50EFhHKnM03Zj6babqeVw1v
 # Get your free Hugging Face API key from: https://huggingface.co/settings/tokens
 HUGGINGFACE_API_KEY=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
 
+# Get your free Google Gemini API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=AIzaSyBEyxObTEXh0-iHkum0Pcxo7DP9bNvembc
+
 SUPPORT_MAIL=codesecuredevteam@gmail.com
 SUPPORT_MAIL_PASSWORD=OwnerPass789
 SMTP_HOST=smtp.sendgrid.net
